/*
 * $Id: ChangeLog,v 1.2741 2004/04/04 12:35:12 mlombardo Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-04-04 15:45 UTC+0100 Marek Paliwoda <paliwoda@inetia.pl>
  * source/vm/fm.c
    ! fixd typo piuHolders -> puiHolders

2004-04-03 22:00 UTC-0300 Marcelo Lombardo <marcelo@xharbour.com.br>
  * source/rtl/hbhex2n.c
    + Additional conversion casts to MSVC on previous commit

2004-04-04 16:30 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/vm/hvm.c
  * source/rtl/hbserv.c
  * include/hbserv.h
    ! change hb_seriviceExit() => hb_serviceExit() for more readability :-)

2004-04-04 10:56 UTC+0200 Lorenzo Fiorini <lorenzo_fiorini/at/tin.it>
  * source/vm/mainwin.c
  * source/vm/hvm.c
    * changed froceLinkMain into forceLinkMain and moved outside extern "C"
      to allow build with OpenWatcom
  * source/rtl/hbhex2c.c
    * added OpenWatcom and mingw defines to exclude broken HB_STRTOHEX, HB_HEXTOSTR
      until the fix

2004-04-03 16:00 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/fastitem.c
    ! Fixed typo in hb_itemCopy() and hb_itemClearMT()
    + Added logic to detect and generate an error on premature string release.

2004-04-04 04:25 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/compiler/hbusage.c
  * source/compiler/harbour.c
    ! code formatting, mainly putting single-line if,else,while into
      curly brackets as per xHarbour coding convention
    ! remove one TODO item (harbour.exe command line):
       @<file> => compile list of modules in <file>

    /*
    New syntax: harbour.exe @mylist.rsp
       mylist.rsp is a plain text file containing a PRG file in each line.

    Example:
    .---
    |  main.prg
    |  process.prg
    |  doc.prg
    `---
    */

2004-04-03 16:55 UTC-0300 Marcelo Lombardo <marcelo@xharbour.com.br>
  * source/rtl/hbhex2n.c