@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2741 2004/04/04 12:35:12 mlombardo Exp $
+ * $Id: ChangeLog,v 1.2742 2004/04/04 13:44:43 map Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,14 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-04-04 21:55 UTC+0200 Francesco Saverio Giudice <info / at / fsgiudice.com>
+  * source/include/hbapi.h
+    * changed HB_BACKGROUNDTASK struct to add new
+      ULONG    ulTaskID;     /* task identifier */
+  * source/rtl/bkgtsks.c
+    * changed functions to support task identifier intead of task item pointer
+    * changed memcpy() to memmove() as Przemek suggests.
 
 2004-04-04 15:45 UTC+0100 Marek Paliwoda <paliwoda@inetia.pl>
   * source/vm/fm.c
